# NanoVote

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  main.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  polls.py  websocket.py
backend/app/core/: __init__.py  config.py  redis.py
backend/app/models/: __init__.py  poll.py
backend/app/services/: __init__.py  poll_service.py  vote_service.py
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/assets/: main.css
frontend/src/components/: AestheticQRCode.vue  GitHubCorner.vue  NumberStepper.vue  PollOption.vue  ShareModal.vue  SmoothItem.vue  Toggle.vue
frontend/src/composables/: useMeta.ts  useWebSocket.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/router/: index.ts
frontend/src/stores/: poll.ts
frontend/src/types/: poll.ts
frontend/src/utils/: api.ts
frontend/src/views/: Home.vue  NotFound.vue  PollView.vue
legacy/: nanovote.db  requirements.txt
nginx/: nginx.conf
